# emoji_visualizer

./: README.md  example.py  pyproject.toml  requirements.txt  setup.py
emoji_visualizer/: visualizer.py
emoji_visualizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/emoji_visualizer/: visualizer.py
src/emoji_visualizer_adi2606.egg-info/: PKG-INFO  SOURCES.txt
src/emoji_visualizer_adi26062003.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
