[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emoji_visualizer_adi2606"
version = "0.0.2"
authors = [
  { name="Aditya Singh", email="1DS22IS008@dsce.edu.in" },
]
description = "A package to visualize emojis in a grid"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/adi26062003/emoji_visualizer"
Issues = "https://github.com/adi26062003/emoji_visualizer/issues"
